@@ -1,3 +1,15 @@
+From 5a5ab3c80eaaea1fe9a43659e2ea5b773b587bb0 Mon Sep 17 00:00:00 2001
+From: François Bissey <frp.bissey@gmail.com>
+Date: Mon, 20 Jan 2020 11:51:52 +1300
+Subject: [PATCH] Because we use qstrings in ciftilib, calls to ciftilib file
+ function have to be made into compatible c strings.
+
+---
+ src/flameo/gsa.cc      | 4 ++--
+ src/melodic/meldata.cc | 2 +-
+ src/melodic/meldata.h  | 2 +-
+ 3 files changed, 4 insertions(+), 4 deletions(-)
+
 diff --git a/src/flameo/gsa.cc b/src/flameo/gsa.cc
 index 70f8f385..16167abe 100644
 --- a/src/flameo/gsa.cc
@@ -21,7 +33,7 @@ index 70f8f385..16167abe 100644
        vector<float> scratchRow(data.Nrows());//read/write a row at a time
        for (int64_t row=0;row<data.Ncols();row++) {	    
 diff --git a/src/melodic/meldata.cc b/src/melodic/meldata.cc
-index 1749a459..b76f052d 100644
+index c4ad2349..1515e702 100644
 --- a/src/melodic/meldata.cc
 +++ b/src/melodic/meldata.cc
 @@ -118,7 +118,7 @@ namespace Melodic{
@@ -46,3 +58,6 @@ index 49774003..f5326bdd 100644
  	  cifti::CiftiXML xml(inputCifti.getCiftiXML());
  	  cifti::CiftiScalarsMap scalarsMap;
  	  std::vector<char> foo = xml.writeXMLToVector();
+-- 
+2.24.1
+
